--- a/assets/episodios.html
+++ b/assets/episodios.html
@@ -12,7 +12,7 @@
 				<b class="HUB">hub</b>
 			</h2>
 			<hr/>
-			<a href="http://pazhub.tk/">Home</a>
+			<a href="index.html">Home</a>
 			<a href="pelicula.html">Peliculas</a>
 			<a href="serie.html" class="active">Series</a>
 			<a href="addmovie.html">Registrar Pelicula</a>
@@ -33,7 +33,7 @@
 			
 			$.ajax({
 					type: 'GET',
-					url: 'http://35.194.48.100:3000/viewEpisodios',					
+					url: 'http://35.188.182.92:3000/viewEpisodios',					
 					contentType: "application/json",
 					dataType: 'json',
 					data: {serieId: parseInt(param)}, 
