--- a/assets/index.html
+++ b/assets/index.html
@@ -11,7 +11,7 @@
 				<b class="HUB">hub</b>
 			</h2>
 			<hr/>
-			<a href="http://pazhub.tk/" class="active">Home</a>
+			<a href="index.html" class="active">Home</a>
 			<a href="pelicula.html">Peliculas</a>
 			<a href="serie.html">Series</a>
 			<a href="addmovie.html">Registrar Pelicula</a>
