--- a/assets/pelicula.html
+++ b/assets/pelicula.html
@@ -12,7 +12,7 @@
 				<b class="HUB">hub</b>
 			</h2>
 			<hr/>
-			<a href="http://pazhub.tk/">Home</a>
+			<a href="index.html">Home</a>
 			<a href="pelicula.html" class="active">Peliculas</a>
 			<a href="serie.html">Series</a>
 			<a href="addmovie.html">Registrar Pelicula</a>
@@ -49,7 +49,7 @@
 		}
 		
 		console.log(paginaactual);
-		$.getJSON('http://35.194.48.100:3000/viewCatalogoPeliculas/'+paginaactual, function(data) {
+		$.getJSON('http://35.188.182.92:3000/viewCatalogoPeliculas/'+paginaactual, function(data) {
 			var listavideo='';
 			$.each(data,function(key,value){
 				listavideo += '<a href="video.html?type=p&id='+value.peliculaId+'">';
