--- a/assets/video.html
+++ b/assets/video.html
@@ -13,7 +13,7 @@
 				<b class="HUB">hub</b>
 			</h2>
 			<hr/>
-			<a href="http://pazhub.tk/">Home</a>
+			<a href="index.html">Home</a>
 			<a href="pelicula.html">Peliculas</a>
 			<a href="serie.html">Series</a>
 			<a href="addmovie.html">Registrar Pelicula</a>
@@ -36,7 +36,7 @@
 			if(type.localeCompare("e") == 0){
 				console.log("episodio");
 				$(document).ready(function(){
-					$.getJSON('http://35.194.48.100:3000/episodio/'+id, function(data) {
+					$.getJSON('http://35.188.182.92:3000/episodio/'+id, function(data) {
 						var listavideo='';
 						listavideo += '<h2>'+data[0].episodioName+'</h2>'
 						listavideo += '<iframe width="640" height="360" frameborder="0" src="'+data[0].episodioURL+'" allowfullscreen ></iframe>';
@@ -48,7 +48,7 @@
 			else{
 				console.log("pelicula");
 				$(document).ready(function(){
-					$.getJSON('http://35.194.48.100:3000/pelicula/'+id, function(data) {
+					$.getJSON('http://35.188.182.92:3000/pelicula/'+id, function(data) {
 						var listavideo='';
 						listavideo += '<h2>'+data[0].peliculaName+'</h2>'
 						listavideo += '<iframe width="640" height="360" frameborder="0" src="'+data[0].peliculaURL+'" allowfullscreen ></iframe>';
